ApiGoogleFilter, MemberSocial